[package]
name = "base_emoji"
version = "1.0.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

build = "build.rs"

include = [
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "build.rs",
  "emojis.json",
  "src/**/*",
  "benches/**/*",
  "examples/**/*"
]

[[bin]]
doc = false
name = "base-emoji"

[dependencies]
phf = "0.7"

[build-dependencies]
phf_codegen = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
